# subcommand

./: Cargo.toml  README.md
src/: command.rs  lib.rs
