[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"
description = "A lightweight command dispatch library."
license = "MIT"
authors = ["Daniel Garcia Briseno <daniel@dangarbri.tech>"]
repository = "https://github.com/dangarbri/dispatcher"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
