[package]
name = "subcommand"
version = "0.1.2"
edition = "2021"
description = "A lightweight command dispatch library."
license = "MIT"
authors = ["Daniel Garcia Briseno <daniel@dangarbri.tech>"]
repository = "https://github.com/dangarbri/subcommand"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
